--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -130,6 +130,7 @@
 							<input type="hidden" name="password-form">
 							<input type="hidden" name="state" value="{{state}}">
 							{% if password_exists and not can_reset_password %}
+                                {% set _show_old_password = true %}
 								<div class="form-group">
 									<label for="password-old">{% trans "Old password" %}</label>
 									<input type="password" class="form-control" name="password-old" id="password-old" required{% if focus_password %} autofocus{% endif %}>
@@ -137,7 +138,7 @@
 							{% endif %}
 							<div class="form-group">
 								<label for="password-new">{% trans "New password" %}</label>
-								<input type="password" class="form-control" name="password-new" id="password-new" required{% if focus_password_new %} autofocus{% endif %}>
+								<input type="password" class="form-control" name="password-new" id="password-new" required{% if not _show_old_password and focus_password %} autofocus{% endif %}>
 							</div>
 							<div class="form-group">
 								<label for="password-confirm">{% trans "Confirm password" %}</label>
