make various dynamic headings link to themselves

--- a/app/templates/user/list.twig
+++ b/app/templates/user/list.twig
@@ -6,7 +6,7 @@
 	<div class="page-header">
 		<div class="container">
 			<h1>
-				{{ title }}
+				<a href="{{filename}}">{{title}}</a>
 				{% if filter %}
 				<small>
 					<a href="{{base}}{{origpath}}" class="label label-default">{{filter}} <span aria-hidden="true">&times;</span></a>
