--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			<h1>{{title}}</h1>
+			<h1><a href="{{filename}}">{{title}}</a></h1>
 		</div>
 	</div>
 	{% if addons %}
