--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -6,9 +6,7 @@
 	<div class="page-header">
 		<div class="breakout"><a href="{{base}}/users/{{username}}"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
 		<div class="container">
-			<h1>
-				{{title}}
-			</h1>
+            <h1><a href="{{filename}}">{{title}}</a></h1>
 		</div>
 	</div>
 	<div class="container">
