show moderator history on profile

--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -117,7 +117,7 @@
 			{% endif %}			
 		</div>
 		<hr>
-		<h2>{% trans %}Moderation log{% endtrans %}</h2>
+		<h2 id="moderations">{% trans %}Moderation log{% endtrans %}</h2>
 		{% if moderations|length > 0 %}
 		<table class="table">
 			<tr><th>{% trans %}Timestamp{% endtrans %}</th><th>{% trans %}Action{% endtrans %}</th><th>{% trans %}Executed by{% endtrans %}</th></tr>
