--- a/app/templates/functions/user.twig
+++ b/app/templates/functions/user.twig
@@ -1,5 +1,5 @@
 {% if user.username %}
-{% if not nolink %}<a href="{{base}}/users/{{user.username}}">{% endif %}<strong>{{user.username}}</strong>{% if not nolink %}</a>{% endif %}
+{% if not nolink %}<a href="{% if link %}{{link}}{% else %}{{base}}/users/{{user.username}}{% endif %}">{% endif %}<strong>{{user.username}}</strong>{% if not nolink %}</a>{% endif %}
 {% if user.administrator %} <span class="label label-success">{% trans %}Administrator{% endtrans %}</span>
 {% elseif user.moderator %} <span class="label label-primary">{% trans %}Moderator{% endtrans %}</span>{% endif %}
 {% else %}
