--- a/app/templates/manage/administrator/portal.twig
+++ b/app/templates/manage/administrator/portal.twig
@@ -12,12 +12,12 @@
 		<div class="row">
 			<div class="col-md-4">
 				<h2>{% trans %}Management{% endtrans %}</h2>
+				<h3>{% trans %}Users{% endtrans %}</h3>
 				<a href="{{base}}/users?filter=moderators" class="btn btn-primary">{% trans "Moderators" %}</a>
+				<a href="{{base}}/users?filter=administrators" class="btn btn-success">{% trans "Administrators" %}</a>
+                <h3>{% trans %}Platform{% endtrans %}</h3>
 				<a href="{{base}}/administrator/logs" class="btn btn-default">{% trans "Logs" %}</a>
-			</div>
-			<div class="col-md-4">
-				<h2>{% trans %}Front page{% endtrans %}</h2>
-				<h3>{% trans %}Featured addons{% endtrans %}</h3>
+				{% if statistics %}<a href="{{statistics}}" class="btn btn-info">{% trans "Statistics" %}</a>{% endif %}
 			</div>
 		</div>
 	</div>
