--- a/app/templates/functions/addon.twig
+++ b/app/templates/functions/addon.twig
@@ -1,14 +1,13 @@
-{% set _addon_url %}
-	{{base}}/addons/{% if addon.game %}{{addon.game.short}}{% else %}{{short}}{% endif %}/{{addon.short}}{% if addon.version %}/{{addon.version}}{% endif %}
-{% endset %}
+{% set _addon_url %}{{base}}/addons/{% if addon.game %}{{addon.game.short}}{% else %}{{short}}{% endif %}/{{addon.short}}{% if addon.version %}/{{addon.version}}{% endif %}{% endset %}
+{% set _addon_translation = attribute(addon, 'getTranslation', [locale]) %}
 <li class="media media-addon">
-	<a href="{{_addon_url}}" class="pull-left">
-		{% include 'functions/svg/addon.twig' %}
-	</a>
-	<div class="media-body">
-		<h4 class="media-heading"><a href="{{_addon_url}}">{{ addon.title }}{% if addon.version %} {% include 'functions/labels/version.twig' with {'version' : addon.version} %}{% endif %}</a>
-		{% if addon.game %}{% include 'functions/tags/game.twig' with {'game' : addon.game} %}{% endif %}
-		</h4>
-		<p>{{addon.introduction}}</p>
-	</div>
+    <a href="{{_addon_url}}" class="pull-left">
+        {% include 'functions/svg/addon.twig' %}
+    </a>
+    <div class="media-body">
+        <h4 class="media-heading"><a href="{{_addon_url}}">{{_addon_translation.title}}{% if addon.version %} {% include 'functions/labels/version.twig' with {'version' : addon.version} %}{% endif %}</a>
+        {% if addon.game %}{% include 'functions/tags/game.twig' with {'game' : addon.game} %}{% endif %}
+    </h4>
+    <p>{{_addon_translation.introduction}}</p>
+</div>
 </li>
