--- a/app/templates/functions/release.twig
+++ b/app/templates/functions/release.twig
@@ -1,12 +1,11 @@
-{% set _release_url %}
-	{{base}}/addons/{{release.addon.game.short}}/{{release.addon.short}}/{{release.version}}
-{% endset %}
+{% set _release_url %}{{base}}/addons/{{release.addon.game.short}}/{{release.addon.short}}/{{release.version}}{% endset %}
+{% set _addon_translation = attribute(release.addon, 'getTranslation', [display_language]) %}
 <li class="media media-addon">
 	<a href="{{_release_url}}" class="pull-left">
 		{% include 'functions/svg/addon.twig' %}
 	</a>
 	<div class="media-body">
-		<h4 class="media-heading"><a href="{{_release_url}}">{{ release.addon.title }}{% if release.version %} {% include 'functions/labels/version.twig' with {'version' : release.version} %}{% endif %}</a>
+		<h4 class="media-heading"><a href="{{_release_url}}">{{_addon_translation.title}}{% if release.version %} {% include 'functions/labels/version.twig' with {'version' : release.version} %}{% endif %}</a>
 		{% if release.addon.game %}{% include 'functions/tags/game.twig' with {'game' : release.addon.game} %}{% endif %}
 		</h4>
 		<p>{{release.addon.introduction}}</p>
